<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Despertaí</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image_description">Image Despertai</string>
    
    <!-- Alarm List Screen -->
    <string name="add_alarm">Add Alarm</string>
    
	<!-- Alarm Settings Screen -->
    <string name="alarmsettings_title">Configurações de alarme</string>
    <string name="settings_title">Configurações</string>
    
    <string name="alarmsettings_sunday">D</string>
    <string name="alarmsettings_monday">S</string>
    <string name="alarmsettings_tuesday">T</string>
    <string name="alarmsettings_wednesday">Q</string>
    <string name="alarmsettings_thursday">Q</string>
    <string name="alarmsettings_friday">S</string>
    <string name="alarmsettings_saturday">S</string>
    
    <string name="alarmsettings_name_option">Nome</string>
    <string name="alarmsettings_sound_option">Som</string>
    <string name="alarmsettings_volume_option">Volume</string>
    <string name="alarmsettings_snooze_option">Soneca</string>
    <string name="alarmsettings_shutdown_mode_option">Modo de desligamento</string>
    
    <string name="alarmsettings_alarm_settings_key">alarmsettings</string>
    <string name="alarmsettings_name_key">name</string>
    <string name="alarmsettings_sound_key">sound</string>
    <string name="alarmsettings_volume_key">volume</string>
    <string name="alarmsettings_snooze_key">snooze</string>
    <string name="alarmsettings_shutdown_mode_key">shutdownmode</string>
    
    <string name="alarmsettings_name_default">Alarme</string>
    <string name="alarmsettings_name_summary">Escolher nome do alarme</string>
    <string name="alarmsettings_sound_summary">Escolher som do alarme</string>
    <string name="alarmsettings_snooze_summary">Escolher tempo de soneca</string>
    <string name="alarmsettings_shutdown_mode_summary">Escolher desligamento</string>
    
    <string name="alarmsettings_save_option">Salvar</string>
    <string name="alarmsettings_cancel_option">Cancelar</string>
    <string name="alarmsettings_remove_option">Remover</string>
    
    <string name="settings_time_zone">timezone</string>
    <string name="settings_temperature_unit">temperatureunit</string>
    <string name="settings_language">language</string>
    <string name="settings_time_format">timeformat</string>
    <string name="settings_clock_format">clockformat</string>
    
    <string name="settings_time_zone_summary">Escolher o fuso</string>
    <string name="settings_temperature_unit_summary">Escolher a unidade</string>
    <string name="settings_language_summary">Escolher o idioma</string>
    <string name="settings_time_format_summary">Escolher o formato</string>
    <string name="settings_clock_format_summary">Escolher o formato</string>
    
    <string name="settings_time_zone_option">Fuso Horário</string>    
    <string name="settings_temperature_unit_option">Unidade de Temperatura</string>    
    <string name="settings_language_option">Idioma</string>    
    <string name="settings_time_format_option">Formato da Hora</string>    
    <string name="settings_clock_format_option">Formato do Relógio</string>
    
    <string name="alarmlist_test">Teste</string>
    <string name="alarmlist_hour">00:00</string>
    
    <!-- Alarm Screen -->
    <string name="alarm_stop_button">Parar</string>

</resources>

